// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <GifGrid/> should match snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate_fadeIn"
  >
    the simpsons
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing <GifGrid/> should show items when images are loaded (useFetchGifs) 1`] = `
<Fragment>
  <h3
    className="animate__animated animate_fadeIn"
  >
    the simpsons
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquiercosa.jpg"
    />
  </div>
</Fragment>
`;
